# facebook-meta

./: .gitignore  index.html  main.py  package-lock.json  package.json  pyproject.toml  run_weekly_analysis.sh  setup_cron.py  tailwind.config.js  vite.config.ts
functions/: index.js
server/: .gitignore  requirements.txt
server/analysis/: prompts.py  video_analyzer.py  weekly_analysis.py
src/: App.tsx  index.ts
src/components/: Card.tsx  Footer.tsx  Header.tsx
src/components/Auth/: Auth.css  AuthProvider.tsx  ForgotPassword.tsx  LoginForm.tsx  SignupForm.tsx
src/components/features/AdPerformance/: AdPerformanceTab.tsx  AdPerformanceTable.tsx
src/components/features/AdminSettings/: AdminSettings.tsx
src/components/features/AdsDiscovery/: AdDiscoveryComponent.tsx
src/components/features/AgentReviews/: AgentReviewsTab.tsx  ReviewCard.tsx
src/components/features/Chat/: ChatInput.tsx  ChatMessage.tsx  ChatTab.tsx  ThinkingIndicator.tsx
src/components/features/ElementalAnalysis/: AdminElementalAnalysisTab.tsx  (+1 more)
src/components/layout/: Header.tsx  Sidebar.tsx  StatusIndicator.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Tabs.tsx
src/firebase/: config.ts
src/hooks/: useAdmin.ts  useAgentReviews.ts  useAnalysis.ts  useChat.ts  useLocalStorage.ts  useMetaConfig.ts
src/lib/: constants.ts  types.ts  utils.ts
src/pages/: AdminDashboard.tsx  Dashboard.tsx  Home.tsx
src/services/: videoAnalysisApi.ts
src/stores/: adDataStore.ts  configStore.ts  videoAnalysisStore.ts
src/styles/: index.css
src/types/: videoAnalysis.ts
(+8 files in other folders)
